[gd_scene load_steps=24 format=3 uid="uid://c7bluxuv6c2rp"]

[ext_resource type="Script" path="res://Scripts/Enemies & States/Enemy.gd" id="1_uhhc5"]
[ext_resource type="PackedScene" uid="uid://b7gxparcwu871" path="res://Enemies/enemy_contact_damage.tscn" id="2_558rh"]
[ext_resource type="Texture2D" uid="uid://dbbodknu0st5h" path="res://Sprites/tinycollector.png" id="3_gus4p"]
[ext_resource type="Script" path="res://trashcollector_controller.gd" id="4_8a6oi"]
[ext_resource type="PackedScene" uid="uid://o2uu27dqbl6i" path="res://Enemies/enemy_knockback_handler.tscn" id="5_pqpdu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_twcrd"]
atlas = ExtResource("3_gus4p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq3si"]
atlas = ExtResource("3_gus4p")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jduio"]
atlas = ExtResource("3_gus4p")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e58p"]
atlas = ExtResource("3_gus4p")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdyl3"]
atlas = ExtResource("3_gus4p")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_favtk"]
atlas = ExtResource("3_gus4p")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbyar"]
atlas = ExtResource("3_gus4p")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hi81v"]
atlas = ExtResource("3_gus4p")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_abwhf"]
atlas = ExtResource("3_gus4p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2dhn"]
atlas = ExtResource("3_gus4p")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2mdb"]
atlas = ExtResource("3_gus4p")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rc4r"]
atlas = ExtResource("3_gus4p")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_88lnr"]
atlas = ExtResource("3_gus4p")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q62a0"]
atlas = ExtResource("3_gus4p")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qde20"]
atlas = ExtResource("3_gus4p")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao3k0"]
atlas = ExtResource("3_gus4p")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ioaxa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_twcrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq3si")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jduio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e58p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdyl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_favtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbyar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hi81v")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abwhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2dhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2mdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rc4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88lnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q62a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qde20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao3k0")
}],
"loop": true,
"name": &"walk",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtkxb"]
size = Vector2(13, 12)

[node name="Trash_Collector" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_uhhc5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ioaxa")
animation = &"idle"

[node name="EnemyContactDamage" parent="." instance=ExtResource("2_558rh")]
position = Vector2(0, 1)
scale = Vector2(0.698, 0.289)

[node name="trashcollector_controller" type="Node2D" parent="."]
script = ExtResource("4_8a6oi")

[node name="floor_detector" type="RayCast2D" parent="trashcollector_controller"]
position = Vector2(13, 4)
target_position = Vector2(0, 7)
hit_from_inside = true

[node name="wall_detector" type="RayCast2D" parent="trashcollector_controller"]
position = Vector2(1, 4)
target_position = Vector2(21, 0)
collision_mask = 9

[node name="wait_timer" type="Timer" parent="trashcollector_controller"]
wait_time = 0.4
one_shot = true
autostart = true

[node name="EnemyKnockbackHandler" parent="trashcollector_controller" instance=ExtResource("5_pqpdu")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_gtkxb")
